--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
+#menu_principal {
+    margin: auto;
+    width: 50%;
+}
+
+#menu_principal h2{
+    margin: auto;
+}
+
 #opciones_menu_principal {
     width: 60%;
     margin: auto;
