Web: CSS Main menu

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,6 +88,6 @@
 
 #opciones_menu_principal a:hover {
     background-color: darkgoldenrod;
-    color: white;
+    color: black;
     font-weight: bold;
 }
