--- a/public/css/app.css
+++ b/public/css/app.css
@@ -77,7 +77,7 @@
 }
 
 #opciones_menu_principal a {
-    background-color: yellow;
+    background-color: #f9b234;
     font-size: 20px;
     color: white;
     display: block;
@@ -87,7 +87,7 @@
 }
 
 #opciones_menu_principal a:hover {
-    background-color: darkgoldenrod;
+    background-color: #e09e2a;
     color: black;
     font-weight: bold;
 }
