--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,6 +88,6 @@
 
 #opciones_menu_principal a:hover {
     background-color: #e09e2a;
-    color: black;
+    color: white;
     font-weight: bold;
 }
