--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,12 @@
     margin: auto;
 }
 
+td, th {
+    border: 1px solid skyblue;
+    text-align: left;
+    padding: 8px;
+}
+
 tr:nth-child(even) {
     background-color: lightblue;
 }
