Web: Editar Juego

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -144,8 +144,9 @@ tr:nth-child(even) {
 }
 
 .small_text_input {
-    width: 50%;
+    width: 30%;
     height: 20px;
+    float: left;
 }
 
 .big_text_input {
