Web: Editar Juego

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,6 +24,12 @@ tr:nth-child(even) {
     background-color: lightblue;
 }
 
+.column2 {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+
 /**
         HEADER
  */
