--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,16 @@
         GENERAL
  */
 
+.button {
+    background-color: #e09e2a;
+    min-width: 200px;
+    border: none;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    padding: 15px 32px;
+}
+
 .contenido {
     text-align: center;
     margin-top: 175px;
