--- a/public/css/app.css
+++ b/public/css/app.css
@@ -122,6 +122,7 @@ tr:nth-child(even) {
     margin: 0;
     padding: 10px 10px;
     position: absolute;
+    top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
