--- a/public/css/app.css
+++ b/public/css/app.css
@@ -256,5 +256,5 @@ tr:nth-child(even) {
         LISTA DE RESULTADOS
  */
 .celda_aviso {
-    background-color: red;
+    background-color: #e09e2a;
 }
