--- a/public/css/app.css
+++ b/public/css/app.css
@@ -199,6 +199,13 @@ tr:nth-child(even) {
     background-color: darkred;
     width: 70%;
     margin: auto;
+    padding: 20px;
+    color: white;
+    border-radius: 10px;
+}
+
+#aviso_deterioro h3 {
+    font-weight: bold;
 }
 
 /**
